scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/unsat/AssrtCoreTest17b.scr
module bad.extensions.assrtcore.safety.unsat.AssrtCoreTest17b;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	choice at A
	{
		1() from A to B;
	}
	or
	{
		2() from A to B;
		do Proto2(A, B);
	}
}

aux global protocol Proto2(role A, role B)
{
	6() from B to A;
	choice at B
	{
		3() from B to A; @"False"
		4() from A to B; @"False"  // (Above?) Unsat -- here, *not* an assrt prog error (as in 20c, and same in ext-annot)
	}
	or
	{
		5() from B to A;
		do Proto2(A, B);
	}
}
//*/
